<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="GUIText">Look at my GUI</string>
    <string name="ClickButtonText">CLICK HERE</string>
    <string name="CheckBox">Check this out!</string>
    <string name="SwitchButton">Switch on / off</string>
    <string name="InputHint">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="snackbar_on">The switch is on</string>
    <string name="snackbar_off">The switch is off</string>
    <string name="undo_message">Undo</string>

    <string name="enter_address">Enter your email address:</string>
    <string name="input_address">Type email here</string>
    <string name="enter_password">Type your password:</string>
    <string name="login_button">LOGIN</string>
    <string name="profile">Your profile</string>
    <string name="address">Your email</string>
    <string name="password">Your password</string>
    <string name="picture">Your picture</string>
    <string name="click_message">Click the above to take a picture</string>
</resources>
