<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_rowSpan="4"
    android:layout_columnSpan="2"
    android:orientation="vertical"
    tools:context=".activity_main_grid">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_weight="1"
        android:gravity="fill"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:text="@string/GUIText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="fill"
        android:layout_columnSpan="1"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/ClickButtonText" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="fill"
        android:layout_columnSpan="1"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/CheckBox" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:layout_columnSpan="1"
        android:layout_column="0"
        android:layout_row="2"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:layout_columnSpan="1"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/SwitchButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="fill"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="3"
        android:hint="@string/InputHint" />

</GridLayout>